# orpiva-k-means

./: LICENSE  README.md  orpiva-k-means.cabal
app/: Main.hs
src/ARFFParser/: AST.hs  Adecls.hs  BasicCombinators.hs  File.hs  Header.hs  Junk.hs  Pairs.hs  Value.hs
src/KMeans/: KMeans.hs
