name:                orpiva-k-means
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/shirazb/orpiva-k-means#readme
license:             BSD3
license-file:        LICENSE
author:              Shiraz Butt
maintainer:          shiraz.b@icloud.com
copyright:           2017 Shiraz Butt
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     KMeans.KMeans
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable orpiva-k-means-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , orpiva-k-means
  default-language:    Haskell2010

test-suite orpiva-k-means-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , orpiva-k-means
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/shirazb/orpiva-k-means
